--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "lit-connect-modal",
   "version": "0.1.4",
   "description": "",
-  "main": "src/modal.js",
+  "main": "build/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node esbuild.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "esbuild": "^0.14.27",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
